--- a/Tic_Tac_Toe.ipynb
+++ b/Tic_Tac_Toe.ipynb
@@ -17,15 +17,17 @@
       "metadata": {
         "id": "bjWEAwXuUaoL",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "1e453810-6900-4347-90fe-97b0b7686303"
       },
       "source": [
         "move=['O','X']\n",
         "playing =''\n",
         "position = 0\n",
-        "full=False\n",
         "replay=True\n",
-        "win=False\n",
         "\n",
         "\n",
         "import random\n",
@@ -39,28 +41,34 @@
         "def reset():\n",
         "  global playlist\n",
         "  global myboard\n",
-        "  global player\n",
+        "  global playermark\n",
+        "  global full \n",
+        "  global win\n",
+        "  global playing\n",
         "  myboard=[]\n",
-        "  player={'A':'','B':''}\n",
+        "  playermark={'A':'','B':''}\n",
+        "  playing =''\n",
+        "  full = False\n",
+        "  win = False\n",
+        "  replay_input = ''\n",
         "\n",
         "\n",
         "def player_input():\n",
-        "  global player\n",
+        "  global playermark\n",
         "  global move\n",
-        "  while player['A'] not in move:\n",
-        "    player['A']=input(f\"Hi {playername['A']}, Do you want O or X? \").upper()\n",
+        "  while playermark['A'] not in move:\n",
+        "    playermark['A']=input(f\"Hi {playername['A']}, Do you want O or X? \").upper()\n",
         "\n",
-        "  if player['A'] == move[0]:\n",
-        "      player['B'] = move[1]\n",
+        "  if playermark['A'] == move[0]:\n",
+        "      playermark['B'] = move[1]\n",
         "  else:\n",
-        "      player['B']=move[0]\n",
+        "      playermark['B']=move[0]\n",
         "\n",
-        "  print(f\" {playername['A']} is {player['A']} and {playername['B']} is {player['B']}.\")\n",
+        "  print(f\" {playername['A']} is {playermark['A']} and {playername['B']} is {playermark['B']}.\")\n",
         "\n",
         "#check int\n",
         "def player_play():\n",
         "  global position\n",
-        "  global player\n",
         "  while True:\n",
         "    position = (input(f'{playername[playing]}, Please enter a number(1-9):'))\n",
         "    try:\n",
@@ -94,7 +102,7 @@
         "\n",
         "def random_play():\n",
         "  global playing\n",
-        "  playing = random.choice(list(player))\n",
+        "  playing = random.choice(list(playermark))\n",
         "  print(f\"{playername[playing]} will start first.\")\n",
         "\n",
         "\n",
@@ -169,17 +177,238 @@
         "  while full == False and win == False :\n",
         "      player_play()\n",
         "      if myboard[position] not in move:   \n",
-        "        place_marker(myboard, player[playing], position)\n",
+        "        place_marker(myboard, playermark[playing], position)\n",
         "        check_full()\n",
-        "        check_win(myboard,player[playing])\n",
+        "        check_win(myboard,playermark[playing])\n",
         "        change_player()\n",
         "      else:\n",
         "        print(\"This is occupied!\")\n",
         "  check_replay()\n",
         "  continue "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Welcome to Tic Tac Toe\n",
+            "Hi Player A, What's your name?o\n",
+            "Hi Player B, What's your name?k\n",
+            "Hi o, Do you want O or X? o\n",
+            " o is O and k is X.\n",
+            "o will start first.\n",
+            "o, Please enter a number(1-9):0\n",
+            "o, Please enter a number(1-9):9\n",
+            "   |   |\n",
+            "   |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):7\n",
+            "   |   |\n",
+            " X |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):5\n",
+            "   |   |\n",
+            " X |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):6\n",
+            "   |   |\n",
+            " X |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):1\n",
+            "   |   |\n",
+            " X |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            " O |   |  \n",
+            "   |   |\n",
+            "Congratulations! o You win!\n",
+            "Play Again? (Y/N)Y\n",
+            "Hi o, Do you want O or X? o\n",
+            " o is O and k is X.\n",
+            "o will start first.\n",
+            "o, Please enter a number(1-9):6\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):5\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):4\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            " O | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):2\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            " O | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | X |  \n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):9\n",
+            "   |   |\n",
+            "   |   | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            " O | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | X |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):6\n",
+            "This is occupied!\n",
+            "k, Please enter a number(1-9):8\n",
+            "   |   |\n",
+            "   | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            " O | X | O\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | X |  \n",
+            "   |   |\n",
+            "Congratulations! k You win!\n",
+            "Play Again? (Y/N)Y\n",
+            "Hi o, Do you want O or X? o\n",
+            " o is O and k is X.\n",
+            "o will start first.\n",
+            "o, Please enter a number(1-9):8\n",
+            "   |   |\n",
+            "   | O |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):9\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):5\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   |  \n",
+            "   |   |\n",
+            "k, Please enter a number(1-9):3\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   |   | X\n",
+            "   |   |\n",
+            "o, Please enter a number(1-9):2\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O |  \n",
+            "   |   |\n",
+            "-----------\n",
+            "   |   |\n",
+            "   | O | X\n",
+            "   |   |\n",
+            "Congratulations! o You win!\n",
+            "Play Again? (Y/N)N\n",
+            "Goodbye!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
