--- a/Tic_Tac_Toe.ipynb
+++ b/Tic_Tac_Toe.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Tic Tac Toe.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,22 +14,26 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/mand-kan/helloworld/blob/master/Tic_Tac_Toe.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bjWEAwXuUaoL",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "outputId": "1e453810-6900-4347-90fe-97b0b7686303"
+        "colab": {}
       },
       "source": [
         "move=['O','X']\n",
-        "playing =''\n",
         "position = 0\n",
         "replay=True\n",
-        "\n",
         "\n",
         "import random\n",
         "\n",
@@ -39,17 +44,18 @@
         "  playername['B']=input(\"Hi Player B, What's your name?\")\n",
         "\n",
         "def reset():\n",
-        "  global playlist\n",
         "  global myboard\n",
         "  global playermark\n",
         "  global full \n",
         "  global win\n",
         "  global playing\n",
+        "  global replay_input\n",
+        "\n",
         "  myboard=[]\n",
         "  playermark={'A':'','B':''}\n",
-        "  playing =''\n",
         "  full = False\n",
         "  win = False\n",
+        "  playing =''\n",
         "  replay_input = ''\n",
         "\n",
         "\n",
@@ -186,229 +192,8 @@
         "  check_replay()\n",
         "  continue "
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Welcome to Tic Tac Toe\n",
-            "Hi Player A, What's your name?o\n",
-            "Hi Player B, What's your name?k\n",
-            "Hi o, Do you want O or X? o\n",
-            " o is O and k is X.\n",
-            "o will start first.\n",
-            "o, Please enter a number(1-9):0\n",
-            "o, Please enter a number(1-9):9\n",
-            "   |   |\n",
-            "   |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):7\n",
-            "   |   |\n",
-            " X |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):5\n",
-            "   |   |\n",
-            " X |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):6\n",
-            "   |   |\n",
-            " X |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):1\n",
-            "   |   |\n",
-            " X |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            " O |   |  \n",
-            "   |   |\n",
-            "Congratulations! o You win!\n",
-            "Play Again? (Y/N)Y\n",
-            "Hi o, Do you want O or X? o\n",
-            " o is O and k is X.\n",
-            "o will start first.\n",
-            "o, Please enter a number(1-9):6\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):5\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):4\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            " O | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):2\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            " O | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | X |  \n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):9\n",
-            "   |   |\n",
-            "   |   | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            " O | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | X |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):6\n",
-            "This is occupied!\n",
-            "k, Please enter a number(1-9):8\n",
-            "   |   |\n",
-            "   | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            " O | X | O\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | X |  \n",
-            "   |   |\n",
-            "Congratulations! k You win!\n",
-            "Play Again? (Y/N)Y\n",
-            "Hi o, Do you want O or X? o\n",
-            " o is O and k is X.\n",
-            "o will start first.\n",
-            "o, Please enter a number(1-9):8\n",
-            "   |   |\n",
-            "   | O |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):9\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):5\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   |  \n",
-            "   |   |\n",
-            "k, Please enter a number(1-9):3\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   |   | X\n",
-            "   |   |\n",
-            "o, Please enter a number(1-9):2\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O |  \n",
-            "   |   |\n",
-            "-----------\n",
-            "   |   |\n",
-            "   | O | X\n",
-            "   |   |\n",
-            "Congratulations! o You win!\n",
-            "Play Again? (Y/N)N\n",
-            "Goodbye!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
